BackEnd/RMEC-rm-service/src/main/java/com/example/demo/error/RFRSkillIdNotFound.java
package com.example.demo.error;

public class RFRSkillIdNotFound  extends RuntimeException {
	public RFRSkillIdNotFound () {
		super("RFR skill id not found");
	}
}
